@@ -2,7 +2,7 @@
 #  Makefile for GXemul src/main/commands
 #
 
-CXXFLAGS=$(CXXWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
+CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
 OBJS=AddComponentCommand.o CloseCommand.o ContinueCommand.o HelpCommand.o \
